--- a/.github/workflows/frontend.main.yml
+++ b/.github/workflows/frontend.main.yml
@@ -5,7 +5,7 @@ on:
     push:
         branches: [ main ]
         paths:
-        -'.github/workflows/frontend.main.yml/**'
+        -'frontend/**'
 
 jobs:
   build:
