--- a/.github/workflows/frontend.main.yml
+++ b/.github/workflows/frontend.main.yml
@@ -4,8 +4,8 @@ name: deploy_frontend
 on:
     push:
         branches: [ main ] 
-        paths: 
-        - 'frontend/**' 
+        paths:
+        - 'frontend/*'
 jobs:
   build:
     runs-on: ubuntu-latest
