--- a/.github/workflows/frontend.main.yml
+++ b/.github/workflows/frontend.main.yml
@@ -1,35 +1,34 @@
 name: deploy_frontend
-# ci cd in front end, whenever the push is made, this yml will be triggered to do the continous workflow
+# CI/CD for frontend, triggered on push to main branch
 
 on:
-    push:
-        branches: [ main ]
-        paths:
-        - 'frontend/**'
-
+  push:
+    branches: [ main ]
+    paths:
+      - 'frontend/**'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: azure/login@v1
-      with:
+      - uses: actions/checkout@v3
+      - uses: azure/login@v1
+        with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-    - name: Upload to blob storage
-      uses: azure/CLI@v1
-      with:
-        inlineScript: |
+          
+      - name: Upload to blob storage
+        uses: azure/cli@v1
+        with:
+          inlineScript: |
             az storage blob upload-batch --account-name resumesite --auth-mode key -d '$web' -s frontend/
-    - name: Purge CDN endpoint
-      uses: azure/CLI@v1
-      with:
-        inlineScript: |
-           az cdn endpoint purge --content-paths  "/*" --profile-name "resumecdn" --name "resumecdn" --resource-group "myresumeRG"
-
-  # Azure logout
-    - name: logout
-      run: |
-            az logout
-      if: always()
+            
+      - name: Purge CDN endpoint
+        uses: azure/cli@v1
+        with:
+          inlineScript: |
+            az cdn endpoint purge --content-paths "/*" --profile-name "resumecdn" --name "resumecdn" --resource-group "myresumeRG"
+            
+      - name: Logout
+        run: |
+          az logout
+        if: always()
